# encrypted-traffic-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  clean.py  combineCSV.py  docker-compose.yaml  extract-nfstream.py  flows.py  freeze_benign.py  main.py  merge-pcaps.py  mscp_down.py  pyproject.toml  sanityChecks-basic.py  zeektocsv.py
configs/: backend.env.example  base.yaml  canonical_sources.yaml  dev.yaml  ml_workflow.yaml  multi_tier_workflow.yaml  prod.yaml
docker/: README.md
docs/: README.md  artifact-index.md  backend-platform.md  findings-register.md  project-journey.md
docs/adr/: 0001-feature-extraction-stack.md
src/tls_dataset/: __init__.py  __main__.py  cli.py  technical_direction.py
src/tls_dataset/backend/: __init__.py  app.py  config.py  db.py  models.py  queue.py  registry.py  schemas.py  scoring.py  services.py  storage.py  worker.py
src/tls_dataset/detection/: __init__.py  multitier.py
src/tls_dataset/ml/: __init__.py  workflow.py
src/tls_dataset/pipeline/: __init__.py  build_dataset.py  canonical.py  common.py  download.py  filtering.py  finalize.py  inspect.py  malicious.py  merge_features.py  nfstream.py  orchestration.py  pcap.py  provenance.py  pruning.py  quality.py  zeek.py  zeek_runner.py
tests/: test_backend_platform.py  test_canonical_dataset.py  test_ml_workflow.py  test_multitier_detection.py  test_pipeline_utils.py  test_provenance_and_malicious_utils.py  test_quality_gates.py  test_reporting_snapshot.py  test_smoke.py  test_static_site_export.py  test_zeek_compatibility.py  test_zeek_runner.py
(+4 files in other folders)
